TUP-32291 Failed when building Route as Microservice due to the content (#4458)
TUP-32291 Failed when building Route as Microservice due to the content changes of the _remote.repositories
https://jira.talendforge.org/browse/TUP-32291